--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "app/src/main/cpp/libxmlstream"]
 	path = app/src/main/cpp/libxmlstream
 	url = git@github.com:jeffboody/libxmlstream.git
+[submodule "app/src/main/java/com/jeffboody/vkk"]
+	path = app/src/main/java/com/jeffboody/vkk
+	url = git@github.com:jeffboody/vkk-java.git
+[submodule "app/src/main/cpp/jpeg"]
+	path = app/src/main/cpp/jpeg
+	url = git@github.com:jeffboody/myjpeg.git
