implement glTF support and add Bat Rider plane
jsmn:
0fe92d0 add jsmn debugging

libcc:
2d97748 add cc_list_get

libgltf:
6a7a65f add object get functions

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "app/src/main/cpp/jpeg"]
 	path = app/src/main/cpp/jpeg
 	url = git@github.com:jeffboody/myjpeg.git
+[submodule "app/src/main/cpp/jsmn"]
+	path = app/src/main/cpp/jsmn
+	url = git@github.com:jeffboody/jsmn.git
+[submodule "app/src/main/cpp/libgltf"]
+	path = app/src/main/cpp/libgltf
+	url = git@github.com:jeffboody/libgltf.git
