--- a/app/src/main/cpp/Makefile
+++ b/app/src/main/cpp/Makefile
@@ -8,18 +8,24 @@ OBJECTS  = $(TARGET).o $(CLASSES:%=%.o)
 HFILES   = $(CLASSES:%=%.h)
 OPT      = -O2 -Wall
 CFLAGS   = $(OPT) -I. -I$(VULKAN_SDK)/include `sdl2-config --cflags` -DA3D_GL2
-LDFLAGS  = -Llibvkk -lvkk -L$(VULKAN_SDK)/lib -lvulkan `sdl2-config --libs` -Llibpak -lpak -Llibxmlstream -lxmlstream -Ltexgz -ltexgz -Llibcc -lcc -Llibexpat/expat/lib -lexpat -lm -lpthread -lz -ljpeg
+LDFLAGS  = -Llibvkk -lvkk -L$(VULKAN_SDK)/lib -lvulkan `sdl2-config --libs` -Llibgltf -lgltf -Ljsmn/wrapper -ljsmn -Llibpak -lpak -Llibxmlstream -lxmlstream -Ltexgz -ltexgz -Llibcc -lcc -Llibexpat/expat/lib -lexpat -lm -lpthread -lz -ljpeg
 CCC      = gcc
 
-all: $(TARGET) libcc libpak libxmlstream texgz libvkk libexpat
+all: $(TARGET) libcc libgltf jsmn libpak libxmlstream texgz libvkk libexpat
 
-$(TARGET): $(OBJECTS) libcc libpak libxmlstream texgz libvkk libexpat
+$(TARGET): $(OBJECTS) libcc libgltf jsmn libpak libxmlstream texgz libvkk libexpat
 	$(CCC) $(OPT) $(OBJECTS) -o $@ $(LDFLAGS)
 
-.PHONY: libcc libpak libxmlstream texgz libvkk libexpat
+.PHONY: libcc libgltf jsmn libpak libxmlstream texgz libvkk libexpat
 
 libcc:
 	$(MAKE) -C libcc
+
+libgltf:
+	$(MAKE) -C libgltf
+
+jsmn:
+	$(MAKE) -C jsmn/wrapper
 
 libpak:
 	$(MAKE) -C libpak
@@ -39,6 +45,8 @@ libexpat:
 clean:
 	rm -f $(OBJECTS) *~ \#*\# $(TARGET)
 	$(MAKE) -C libcc clean
+	$(MAKE) -C libgltf clean
+	$(MAKE) -C jsmn/wrapper clean
 	$(MAKE) -C libpak clean
 	$(MAKE) -C libxmlstream clean
 	$(MAKE) -C texgz clean
